--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Nigger\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\ViczaiP\u00e9terMil\u00e1n(SZO\\AppData\\Roaming\\NetBeans\\17\\build.properties
